--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,33 +1,39 @@
 {{ define "main" }}
-  {{- $readMore := (T "readMore") | default "Read more →" -}}
-  <div class="hx-mx-auto hx-flex {{ partial `utils/page-width` . }}">
-    {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" true) }}
-    <article class="hx-w-full hx-break-words hx-flex hx-min-h-[calc(100vh-var(--navbar-height))] hx-min-w-0 hx-justify-center hx-pb-8 hx-pr-[calc(env(safe-area-inset-right)-1.5rem)]">
-      <main class="hx-w-full hx-min-w-0 hx-max-w-6xl hx-px-6 hx-pt-4 md:hx-px-12">
-        <br class="hx-mt-1.5 hx-text-sm" />
-        {{ if .Title }}<h1 class="hx-text-center hx-mt-2 hx-text-4xl hx-font-bold hx-tracking-tight hx-text-slate-900 dark:hx-text-slate-100">{{ .Title }}</h1>{{ end }}
-        <div class="content">{{ .Content }}</div>
-        {{- $pages := partial "utils/sort-pages" (dict "page" . "by" site.Params.blog.list.sortBy "order" site.Params.blog.list.sortOrder) -}}
-        {{- range $pages }}
-          <div class="hx-mb-10">
-  
-            {{ $description := partial "utils/page-description" . }}
+{{- $readMore := (T "readMore") | default "Read more →" -}}
+<div class="hx-mx-auto hx-flex {{ partial `utils/page-width` . }}">
+  {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" true) }}
+  <article class="hx-w-full hx-break-words hx-flex hx-min-h-[calc(100vh-var(--navbar-height))] hx-min-w-0 hx-justify-center hx-pb-8 hx-pr-[calc(env(safe-area-inset-right)-1.5rem)]">
+    <main class="hx-w-full hx-min-w-0 hx-max-w-6xl hx-px-6 hx-pt-4 md:hx-px-12">
+      <br class="hx-mt-1.5 hx-text-sm" />
+      {{ if .Title }}<h1 class="hx-text-center hx-mt-2 hx-text-4xl hx-font-bold hx-tracking-tight hx-text-slate-900 dark:hx-text-slate-100">{{ .Title }}</h1>{{ end }}
+      <div class="content">{{ .Content }}</div>
+      {{- $pages := partial "utils/sort-pages" (dict "page" . "by" site.Params.blog.list.sortBy "order" site.Params.blog.list.sortOrder) -}}
+      {{- $previousYear := 0 -}}
+      {{- range $pages }}
+      <div class="hx-mb-10">
 
-            <p class="hx-opacity-50 hx-text-sm hx-mt-4 hx-leading-7">{{ partial "utils/format-date" .Date }}</p>
-            {{ partial "shortcodes/card.html" (dict
-              "title" .Title
-              "subtitle" $description
-              "link" .RelPermalink
-              "image" .Params.thumbnail
-            ) }}
-            {{- if site.Params.blog.list.displayTags -}}
+        {{ $description := partial "utils/page-description" . }}
+        {{- $currentYear := .Date.Year }}
+        {{- if ne $currentYear $previousYear }}
+          <h1 class="hx-mt-4 hx-text-2xl hx-font-bold hx-text-slate-900 dark:hx-text-slate-100">{{ $currentYear }}</h1>
+        {{- end }}
+        {{- $previousYear = $currentYear -}}
 
-            {{- end -}}
+        <p class="hx-opacity-50 hx-text-sm hx-mt-4 hx-leading-7">{{ partial "utils/format-date" .Date }}</p>
+        {{ partial "shortcodes/card.html" (dict
+          "title" .Title
+          "subtitle" $description
+          "link" .RelPermalink
+          "image" .Params.thumbnail
+        ) }}
+        {{- if site.Params.blog.list.displayTags -}}
 
-          </div>
-        {{ end -}}
-      </main>
-    </article>
-    <div class="max-xl:hx-hidden hx-h-0 hx-w-64 hx-shrink-0"></div>
-  </div>
+        {{- end -}}
+
+      </div>
+      {{ end -}}
+    </main>
+  </article>
+  <div class="max-xl:hx-hidden hx-h-0 hx-w-64 hx-shrink-0"></div>
+</div>
 {{- end -}}
