--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,26 +15,6 @@
 {{- end -}}
 
 <footer class="hextra-footer hx-bg-gray-100 hx-pb-[env(safe-area-inset-bottom)] dark:hx-bg-neutral-900 print:hx-bg-transparent">
-    <!-- {{- if $footerSwitchesVisible -}}
-    <div class="hx-mx-auto hx-flex hx-gap-2 hx-py-2 hx-px-4 {{ $footerWidth }}">
-      {{- partial "language-switch.html" (dict "context" .) -}}
-      {{- with $displayThemeToggle }}{{ partial "theme-toggle.html" }}{{ end -}}
-    </div>
-    {{- if or hugo.IsMultilingual $displayThemeToggle -}}
-      <hr class="dark:hx-border-neutral-800" />
-    {{- end -}}
-  {{- end -}} -->
-
-
-  <!-- {{- if $footerSwitchesVisible -}}
-  <div class="hx-mx-auto hx-flex hx-gap-2 hx-py-2 hx-px-4 {{ $footerWidth }}">
-    {{- partial "language-switch.html" (dict "context" .) -}}
-  </div>
-  {{- if or hugo.IsMultilingual $displayThemeToggle -}}
-    <hr class="dark:hx-border-neutral-800" />
-  {{- end -}} -->
-<!-- {{- end -}} -->
-
   
   <div class="hx-text-center {{ $footerWidth }} hx-pl-[max(env(safe-area-inset-left),1.5rem)] hx-pr-[max(env(safe-area-inset-right),1.5rem)] hx-text-gray-600 dark:hx-text-gray-400">
     <p>
@@ -42,7 +22,7 @@
       <b>Hassaan Anwar</b><br>
       <b>
         <u><a href="/">Home</a></u> -
-        <u><a href="/about-me">About</a></u> -
+        <u><a href="/about-me">About Me</a></u> -
         <u><a href="/contact">Contact</a></u> -
         <u><a href="/credits">Credits</a></u>
       </b>
